# hammer-datastore

./: .env.ddev.example  .env.example  .env.example.docker  .env.testing  .gitignore  CHANGELOG.md  Makefile  README.md  composer.json  deploy.php  docker-compose.yml  docker-nginx.conf  package-lock.json  package.json  phpstan.neon  phpunit.xml  sample-elastic.json
.circleci/: .env.testing  config.yml
.ddev/: config.yaml  docker-compose.elasticsearch.yaml  docker-compose.kibana.yaml
.github/: dependabot.yml
app/: Search.php  (+5 more)
harvester/: .env.example  .gitignore  Dockerfile  README.md  conftest.py  install_harvester_dependencies.sh  install_harvester_dependencies_dev.sh  install_harvester_dependencies_stage.sh  pyproject.toml  setup.py  taskfile.yml
harvester/cron/: run_harvester_cron  run_harvester_cron_dev  run_harvester_cron_stage  run_harvester_for_environment.sh
harvester/harvester/: functions.py
harvester/harvester/components/: Validator.py  __init__.py
harvester/harvester/components/adaptors/: ElasticsearchAdaptor.py  LocalRepositoryAdaptor.py  __init__.py
harvester/harvester/harvester/: HarvesterBase.py  HarvesterSimple.py  README.md  __init__.py
harvester/harvester/harvester/assetbank/: .env.example  AssetBankHarvester.py  __init__.py
harvester/harvester/processors/: DelimiterProcessor.py  DurationProcessor.py  FriendlyUrlProcessor.py  TranscriptionProcessor.py  TrintProcessor.py  __init__.py
harvester/install/: install_harvester_dependencies_stage.sh
harvester/scripts/: run_harvester.py
harvester/tests/: test_assetbank_harvester.py
(+92 files in other folders)
