[tool.poetry]
name = "hammer-channel-harvester"
version = "0.1.0"
description = ""
authors = ["Neil Hawkins <neilh@cogapp.com>"]
packages = [ { include = "**/*.py", from = "."  }]

[tool.poetry.dependencies]
python = "^3.12"
PyYAML = "^6.0.1"
lxml = "^5.1.0"
pytz = "^2024.1"
tqdm = "^4.66.2"
elasticsearch = "^8"
requests = "^2.31.0"
filecache = "^0.81"
pymediainfo = "^6.1.0"
dateparser = "^1.2.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
